--- a/Exercice/Zozor.css
+++ b/Exercice/Zozor.css
@@ -6,13 +6,10 @@
 body{
 	background-image: url(fond_jaune.png);
 	font-family: 'Trebuchet MS', Arial, Sans serif;
-	color:181818;
+	color:#181818;
 
 }
 /* polices utilisées */;
-@font-face{
-	font-family: Trebuchet MS
-}
 
 @font-face
 {
@@ -38,10 +35,24 @@ body{
     font-style: normal;
 }
 
-
+#bloc_page
+{
+	width: 900px;
+	margin: auto;
+}
 /*HEADER*/
-.logo{
-	float:left;
+
+#logo
+{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+
+#logo img
+{
+    width: 90px;
+    height: 40px;
 }
 
 .ligne{
@@ -62,6 +73,15 @@ header{
 	font-family: Dayrom;
 	font-size: 1em;
 }
+
+header h1
+{
+    font-family: 'BallparkWeiner', serif;
+    font-size: 2.5em;
+    font-weight: normal;
+    margin: 0 0 0 20px;
+}
+
 
 a:focus{
 	color:red;
@@ -90,28 +110,23 @@ em{
 
 /* BANNIERE*/
 
-.sanfrancisco{
-	
+#banniere_image{
+	height: 200px;
+    background: url(sanfrancisco.jpg) no-repeat;
+    position: relative;
+	box-shadow: 0px 4px 4px #1c1a19;
+    margin-bottom: 25px;
 }
 
-.retour{
-	background-color:rgba(0,0,0,0.7);
-	padding: 10px 10px 10px 10px;
-	border-radius: 5px;
-	color:white;
-	display:flex;
-	align-items: flex-end;
-	justify-content:space-between;
-	font-size:0.8em;
-	font-family: Trebuchet MS;
-	position:;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+#banniere_description{
+	position: absolute;
+	width: 100%;
+    height: 30px;
+    padding-top: 15px;
+	padding-left: 4px;
+	color: white;
+    background-color: rgba(0,0,0,0.8);
 }
-
 .cfarticle{
 	background:linear-gradient(white 0.2%,red 99.8%);
 	padding: 8px 8px 8px 8px;
