--- a/Exercice/Zozor.css
+++ b/Exercice/Zozor.css
@@ -124,7 +124,7 @@ a{
 	width: 89%;
 	background:url(sanfrancisco.jpg) no-repeat;
 	position:relative;	
-	box-shadow: 5px, 5px,5px #2F4F4F;
+	box-shadow: 0px 4px 4px #1c1a19;
 	margin-bottom:10px;
 	border-radius:5px;	
 
